--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gsap": "^3.7.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
+    "react-d3-speedometer": "^1.0.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
